Link model to UI generator

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,17 +102,11 @@
       "Found 2000 files belonging to 39 classes.\n",
       "Using 1600 files for training.\n",
       "Found 2000 files belonging to 39 classes.\n",
-      "Using 400 files for validation.\n",
-      "Found 2000 files belonging to 39 classes.\n",
-      "Using 1600 files for training.\n",
-      "Found 2000 files belonging to 39 classes.\n",
       "Using 400 files for validation.\n"
      ]
     }
    ],
    "source": [
-    "mall_train_ds = make_ds(mall_dir,mall_labels,False, BATCH_SIZE)\n",
-    "mall_val_ds = make_ds(mall_dir,mall_labels,True, BATCH_SIZE)\n",
     "train_ds = make_ds(data_dir,labels,False, BATCH_SIZE)\n",
     "val_ds = make_ds(data_dir,labels,True, BATCH_SIZE)"
    ]
@@ -609,6 +603,71 @@
    ],
    "source": [
     "model.predict(ds[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model(\"model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2000 files belonging to 39 classes.\n",
+      "Using 1600 files for training.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-28 21:06:53.393710: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [1600]\n",
+      "\t [[{{node Placeholder/_4}}]]\n",
+      "2023-10-28 21:06:53.393908: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [1600]\n",
+      "\t [[{{node Placeholder/_4}}]]\n",
+      "2023-10-28 21:06:53.419603: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds2 = [x for x in make_ds(data_dir,labels,False,1).as_numpy_iterator()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 119ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[30.908407]], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(ds2[0][0])"
    ]
   },
   {
